--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "lodash.debounce": "4.0.8",
+    "lodash.throttle": "4.1.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
